--- a/css/style.css
+++ b/css/style.css
@@ -679,20 +679,21 @@ footer {
     .authors h2 {
       text-align: left;
       margin: 0;
-      font-size: 48px;
-      font-size: 3em; }
+      font-size: 49.6px;
+      font-size: 3.1em; }
     .authors img {
-      width: 150px;
+      width: 100%;
       margin: 1em 0 0 1em; }
     .authors .author-pic {
-      margin: 3em 0 .5em 1em; }
+      margin: 3em 0 .5em 1em;
+      width: 20%; }
     .authors .interview {
       font-size: 16px;
       font-size: 1em;
-      width: 60%;
+      width: 65%;
       display: inline;
       float: left;
-      margin: 2em 0 1em 1.2em;
+      margin: 2em 0 0 2.5em;
       vertical-align: middle; }
 
   /*
